--- a/cart.html
+++ b/cart.html
@@ -133,7 +133,7 @@
 <body>
 
   <header>
-    <div class="logo">Saaptify</div>
+    <div class="logo">Saaaaaaptify</div>
     <nav>
       <a href="index.html">Home</a>
       <a href="restaurants.html">Restaurants</a>
